EXTRA_DIST =	src/dsa_key.cpp			\
		src/fast_qimage.cpp		\
		src/isd_base.cpp		\
		src/isd_connection.cpp		\
		src/ivs_connection.cpp		\
		src/local_system.cpp		\
		src/messagebox.cpp		\
		src/rect_list.cpp		\
		src/system_service.cpp		\
		include/debug.h			\
		include/dsa_key.h		\
		include/fast_qimage.h		\
		include/isd_base.h		\
		include/isd_connection.h	\
		include/italc_rfb_ext.h		\
		include/ivs_connection.h	\
		include/local_system.h		\
		include/messagebox.h		\
		include/qt_features.h		\
		include/qt_user_events.h	\
		include/rect_list.h		\
		include/types.h			\
		include/system_service.h	\
		include/rfb/keysym.h		\
		include/rfb/rfb.h		\
		include/rfb/rfbproto.h

CLEANFILES =	include/rfb/rfbconfig.h		\
		include/rfb/rfbint.h

