FILE(GLOB ctl_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h)
FILE(GLOB ctl_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)

QT5_WRAP_CPP(ctl_MOC_out ${ctl_INCLUDES})

IF(VEYON_BUILD_WIN32)
	SET(WINRC "${CMAKE_CURRENT_BINARY_DIR}/veyon-ctl-rc.obj")
	ADD_DEFINITIONS(-DUNICODE -D_UNICODE)
	ADD_CUSTOM_COMMAND(OUTPUT ${WINRC}
						COMMAND ${WINDRES}
							-I${CMAKE_CURRENT_SOURCE_DIR}
							-o${WINRC}
							-i${CMAKE_CURRENT_BINARY_DIR}/veyon-ctl.rc
						DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/veyon-ctl.rc)
ENDIF(VEYON_BUILD_WIN32)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/src)
ADD_EXECUTABLE(veyon-ctl ${ctl_UIC_out} ${ctl_SOURCES} ${ctl_INCLUDES} ${ctl_MOC_out} ${WINRC})
TARGET_LINK_LIBRARIES(veyon-ctl veyon-core Qt5::Network)

INSTALL(TARGETS veyon-ctl RUNTIME DESTINATION bin)

IF(VEYON_BUILD_WIN32)
	SET_TARGET_PROPERTIES(veyon-ctl PROPERTIES LINK_FLAGS -mconsole)
ENDIF(VEYON_BUILD_WIN32)

